setting up page
project setup

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -122,6 +122,151 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "742d8b2c": {
+          "id": "742d8b2c",
+          "path": "css/bootstrap.min.css",
+          "output": "css/bootstrap.min-dist.css",
+          "name": "bootstrap.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "a7c76be7": {
+          "id": "a7c76be7",
+          "path": "css/font-awesome.min.css",
+          "output": "css/font-awesome.min-dist.css",
+          "name": "font-awesome.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "a4bfe505": {
+          "id": "a4bfe505",
+          "path": "css/styles.css",
+          "output": "css/styles-dist.css",
+          "name": "styles.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "3e05ead4": {
+          "id": "3e05ead4",
+          "path": "css/styles.sass",
+          "output": "css/styles.css",
+          "name": "styles.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "dc11a8b3": {
+          "id": "dc11a8b3",
+          "path": "css/_normalize.scss",
+          "output": "css/_normalize.css",
+          "name": "_normalize.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "3e05ead4"
+          ],
+          "type": "sass"
+        },
+        "d73b3391": {
+          "id": "d73b3391",
+          "path": "js/bootstrap.min.js",
+          "output": "js/bootstrap.min-dist.js",
+          "name": "bootstrap.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "de5ffe1d": {
+          "id": "de5ffe1d",
+          "path": "js/jquery.js",
+          "output": "js/jquery-dist.js",
+          "name": "jquery.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "50ef0fa9": {
+          "id": "50ef0fa9",
+          "path": "js/main.js",
+          "output": "js/main-dist.js",
+          "name": "main.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "503d8768": {
+          "id": "503d8768",
+          "path": "test.php",
+          "output": "test.php",
+          "name": "test.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
