--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1220,6 +1220,43 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "b3df0eec": {
+          "id": "b3df0eec",
+          "path": "products.php",
+          "output": "products.php",
+          "name": "products.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "fb3b3082": {
+          "id": "fb3b3082",
+          "path": "uploads/ee001ab81c835bc289aea9d03fe02b8b.jpg",
+          "output": "uploads/ee001ab81c835bc289aea9d03fe02b8b.jpg",
+          "name": "ee001ab81c835bc289aea9d03fe02b8b.jpg",
+          "category": "IMAGE",
+          "size": 9624,
+          "type": "jpg",
+          "initialSize": 9624,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4d9d099f": {
+          "id": "4d9d099f",
+          "path": "uploads/b07b0f9a38556fd6e98724adfbdd2915.jpg",
+          "output": "uploads/b07b0f9a38556fd6e98724adfbdd2915.jpg",
+          "name": "b07b0f9a38556fd6e98724adfbdd2915.jpg",
+          "category": "IMAGE",
+          "size": 39235,
+          "type": "jpg",
+          "initialSize": 39235,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
